Drop node.js 16 and 19
PR-URL: https://github.com/metarhia/metacalc/pull/32

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "metacalc.d.ts",
   "files": ["lib/", "metacalc.d.ts"],
   "engines": {
-    "node": "16 || 18 || 19 || 20"
+    "node": "18 || 20"
   },
   "repository": {
     "type": "git",
