--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "metacalc.d.ts",
   "files": ["lib/", "metacalc.d.ts"],
   "engines": {
-    "node": "18 || 20"
+    "node": "18 || 20 || 21"
   },
   "repository": {
     "type": "git",
