--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "author": "Timur Shemsedinov <timur.shemsedinov@gmail.com>",
   "license": "MIT",
   "description": "Spreadsheet calculations for Metarhia",
-  "keywords": ["node.js", "metarhia", "spreadsheet", "spreadsheets"],
+  "keywords": [
+    "node.js",
+    "metarhia",
+    "spreadsheet",
+    "spreadsheets"
+  ],
   "main": "metacalc.js",
   "types": "metacalc.d.ts",
-  "files": ["lib/", "metacalc.d.ts"],
+  "files": [
+    "lib/",
+    "metacalc.d.ts"
+  ],
   "engines": {
     "node": "18 || 20 || 21"
   },
