--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "metacalc.d.ts"
   ],
   "engines": {
-    "node": "18 || 20 || 21"
+    "node": "18 || 20 || 21 || 22"
   },
   "repository": {
     "type": "git",
