--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "url": "https://www.patreon.com/tshemsedinov"
   },
   "scripts": {
-    "test": "npm run lint && npm run types && metatests test/unit.js",
+    "test": "npm run lint && npm run types && node --test",
     "types": "tsc -p tsconfig.json",
     "lint": "eslint . && prettier --check \"**/*.js\" \"**/*.json\" \"**/*.md\" \"**/*.ts\"",
     "fix": "eslint . --fix && prettier --write \"**/*.js\" \"**/*.json\" \"**/*.md\" \"**/*.ts\""
@@ -42,7 +42,6 @@
     "@types/node": "^22.3.0",
     "eslint": "^9.9.1",
     "eslint-config-metarhia": "^9.0.5",
-    "metatests": "^0.9.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4"
   },
