--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "metacalc.d.ts"
   ],
   "engines": {
-    "node": "18 || 20 || 21 || 22"
+    "node": ">=18"
   },
   "repository": {
     "type": "git",
@@ -39,13 +39,14 @@
     "fix": "eslint . --fix && prettier --write \"**/*.js\" \"**/*.json\" \"**/*.md\" \"**/*.ts\""
   },
   "devDependencies": {
-    "@types/node": "^22.3.0",
-    "eslint": "^9.9.1",
-    "eslint-config-metarhia": "^9.0.5",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
+    "@types/node": "^24.3.0",
+    "eslint": "^9.34.0",
+    "eslint-config-metarhia": "^9.1.3",
+    "metatests": "^0.9.1",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
-    "metavm": "^1.4.2"
+    "metavm": "^1.4.5"
   }
 }
